2016/08/24 v111
	1. Add info for aura icons on unitframes.

2016/08/24 v108
	1.soul-fragments is added for demon-hunter as class power.

2016/08/24 v107
	1. Fix player can't enter the game with too many container views.

2016/08/24 v106
	1. Fix the lag when sort items in the bank and container.

2016/08/24 v105
	1. Change the equip set would update the container view.

2016/08/24 v104
	1. Fix the cooldown size of the action buttons.

2016/08/24 v103
	1. 'IsUnknownAppearance' rule added for container view to only show the items with unknow appearance that can be added to your wardrobe.

2016/08/23 v102
	1. Fix container bag still shown when the container view module is actived.

2016/08/23 v101
	1. Fix for dynamic item level.

2016/08/23 v100
	1. Fix the item level by using info form gametooltip.
	2. Add equipsetitem rule for container view, so you can seperate them from others.

2016/08/22 v99
	1. Add item level for equipment in the container buttons.
	2. Add seperate for containers in one view.
	3. You can use R in the view manager to change the name.

2016/08/22 v98
	1. Esc will close the container and bank correctly.
	2. Fix the used/total info of the container display 0/0.

2016/08/22 v97
	1. Bank view system added, works like the container view system.

2016/8/14 v96
	1. Add border color for poor item

2016/8/14 v95
	1. Add a condition for container view system, modify the save format, reset the view system's settings.

2016/8/14 v94
	1. Fix label name when edit the item in the view mananger's treeview.

2016/8/14 v93
	1. You can modify anchor points for all elements, used for auto-fit for any resolution.
	2. Container View system added.

2016/8/4 v92
	1. Fix can't right-click to cancel the buff.
	2. Apply a border to the buff icons.

2016/8/4 v91
	1. Fix the tip show double times for some items and talents.

2016/8/3 v90
	1. Fix error for adding information on GameTooltip with recipes.

2016/8/03 v89